# echelonos

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_unique_constraints.py  003_replace_simhash_with_minhash.py  004_add_blocking_keys.py
docs/tutorial/: 00_overview.md  01_infrastructure.md  02_database_schema.md  02a_schema_reference.md  03_stage_0a_validation.md  04_stage_0b_dedup.md  05_stage_1_ocr.md  06_stage_2_classification.md  07_stage_3_extraction.md  08_stage_4_linking.md  09_stage_5_amendment.md  10_stage_6_evidence.md  11_stage_7_report.md  12_api_and_frontend.md  13_testing_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  mockData.ts  types.ts
frontend/src/components/: DocumentUpload.tsx  EvidenceDrawer.tsx  FlagPanel.tsx  ObligationTable.tsx  StatsCards.tsx  SummaryCharts.test.tsx  SummaryCharts.tsx
src/echelonos/: __init__.py  config.py
src/echelonos/api/: app.py  demo_data.py
src/echelonos/db/: models.py  persist.py  session.py
tests/: conftest.py
tests/e2e/: test_api_db_integration.py  test_dedup_rexair_346.py  test_file_persistence.py  test_full_pipeline_rexair.py  test_idempotency.py  test_pipeline_run_stop.py  test_stage_0a_validation.py  test_stage_0b_dedup.py  test_stage_1_ocr.py  test_stage_2_classification.py  test_stage_3_extraction.py  test_stage_4_linking.py  test_stage_5_amendment.py  test_stage_6_evidence.py  test_stage_7_report.py  test_upload_and_clear.py
(+16 files in other folders)
